Fixed navbar jump

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ h2 {
 h3 {
   font-size: 48px;
   text-align: center;
-  margin-top: 150px;
+  margin-top: 100px;
   margin-bottom: 40px;
 }
 
@@ -203,6 +203,10 @@ h4,
   border: none;
   width: 48px;
   padding: 5px;
+}
+
+.navbar-size-replace {
+  height: 61px;
 }
 
 .skills {
